--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
       <a href="https://github.com/anaborgestri/AI-travel-guide" target="_blank"
         >GitHub</a
       >
-      and deployed by <a>Netlify</a>
+      and deployed by
+      <a href="https://effortless-jelly-534ed4.netlify.app/" target="_blank"
+        >Netlify</a
+      >
     </footer>
   </body>
   <script src="script.js"></script>
